--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,24 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com;">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com https://apis.google.com https://cdn.jsdelivr.net;">
 
     <title>Proyecto</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Ícono del sitio -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <!-- Fuentes de Google -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Bootstrap CSS (Opcional si usas Angular Material, puedes quitarlo) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Bootstrap JS con Popper.js (Para dropdowns, modals, tooltips, etc.) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- SDK de Google Sign-In -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
